--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -7,5 +7,11 @@
 	<body>
 		<h1>It's Works !</h1>
 		<img src="web_server.png" />
+		<h2><a href="info.php">PHP Variables</a></h2>
+		<h2>Form Test</h2>
+		<form action="http://127.0.0.1/p/phpinfo/info.php" method="POST">
+			<input type="text" name="inputText1" value="Test1" /><br />
+			<input type="submit" name="submit" value="Submit" />
+		</form>
 	</body>
 </html>
